@@ -1,1 +1,1 @@
-{"version":"5.8-dev","releasedate":"2018-04-15"}
+{"version":"5.8-dev","releasedate":"2018-05-04"}
